adding week 6 demos

--- a/demos/week5/text-layout/index.html
+++ b/demos/week5/text-layout/index.html
@@ -13,7 +13,7 @@
   <h1>
     From <cite>Moby Dick; or The Whale</cite> by <b>Herman Melville</b>, 1819–1891
   </h1>
-  <h2><b>Chapter 1.</b> Loomings.</h2>
+  <h2>CHAPTER 1. Loomings.</h2>
   <p>
     Call me Ishmael. Some years ago—never mind how long precisely—having little or no money in my
     purse, and nothing particular to interest me on shore, I thought I would sail about a little and
