Project 2 due dates changed

--- a/syllabuspages/projects.html
+++ b/syllabuspages/projects.html
@@ -200,7 +200,7 @@
             <li>
               <b class="darkredfont">Due: Thursday, October 26th, 11:59pm Chicago</b> Whole team: A screen-by-screen task analysis of
               your chosen MyIIT task (again, e.g., generating a class schedule, dropping a class, paying a tuition bill, removing a
-              registration hold) posted to Basecamp, with relevant <b>anonymized</b> screen shots
+              registration hold) posted to Basecamp, with relevant <b>anonymized</b> capture shots
               (black out any personally identifiable information).
             </li>
             <li>
