Project 2 due dates changed

--- a/syllabuspages/projects.html
+++ b/syllabuspages/projects.html
@@ -197,30 +197,35 @@
         <section class="deliverables">
           <h4>Deliverables &amp; Milestones</h4>
           <ol>
+            <li><b class="darkredfont">Due: Thursday, November 2nd, 11:59pm Chicago</b>Whole team: Create a group or joina group on basecamp
+            Project 2: Groups. Groups should be 3 or 4 people each. 
+            </li>
             <li>
-              <b class="darkredfont">Due: Thursday, October 26th, 11:59pm Chicago</b> Whole team: A screen-by-screen task analysis of
+              <b class="darkredfont">Due: Thursday, November 2nd, 11:59pm Chicago</b> Whole Team: A screen-by-screen task analysis of
               your chosen MyIIT task (again, e.g., generating a class schedule, dropping a class, paying a tuition bill, removing a
               registration hold) posted to Basecamp, with relevant <b>anonymized</b> capture shots
               (black out any personally identifiable information).
             </li>
             <li>
-              <b class="darkredfont">Due: Tuesday, November 14th, 11:59pm Chicago</b> Create a Basecamp post describing your work
-              in progress. Title the post with your name and project number (example Daniel Krieglstein: Project 2). Your post
-              should include the URL to your GitHub repository, live link (GitHub pages), and two questions eliciting feedback on from fellow students.
+              <b class="darkredfont">Due: Tuesday, November 14th, 11:59pm Chicago</b> Whole Team: Create a Basecamp post describing your work
+              in progress. Title the post with your team name and project number (example: Team Wonder Women &#8212; Project 2). Your post
+              should include the full names of all team members, the URL to your GitHub repository, live link (GitHub pages), 
+              and two questions eliciting feedback on from fellow students.
             </li>
              <li>
-              <b class="darkredfont">Due: Friday, November 17th, 11:59pm Chicago</b> Give constructive comments
-              to help at least three other students.
+              <b class="darkredfont">Due: Friday, November 17th, 11:59pm Chicago</b> Individual: Give constructive comments
+              to help at least three other teams.
             </li>
             <li>
-              <b class="darkredfont">Due: Thursday, November 23th, 11:59pm Chicago</b> Each team member: create a new basecamp post under Project 2
-              with the https:// links to your individual and group GitHub repositories.
+              <b class="darkredfont">Due: Thursday, November 23th, 11:59pm Chicago</b> Whole Team: Revise your team basecamp post under Project 2
+              to add links to each member's individual fork to the group GitHub repository. Individual forks should include README.md files with
+              following:
               <ul>
                 <li>
-                  Add a 3-4 sentence self-critique memo of your project and your progress in class to this point
+                  A 3-4 sentence self-critique memo of your project and your progress in class to this point
                 </li>
                 <li>
-                  A 2-3 sentence critique of each group member’s work on the project
+                  A 3-4 sentence critique of each group member’s work on the project
                 </li>
               </ul>
              </li>
