adding punctuations to sentances

--- a/syllabuspages/projects.html
+++ b/syllabuspages/projects.html
@@ -173,23 +173,23 @@
             <li>Conduct task analysis and apply the information gained to a user-centered design</li>
             <li>
               Build interface modules/elements from a basic design foundation of alignment, contrast,
-              proximity, and repetition
+              proximity, and repetition.
             </li>
             <li>
               Apply design principles including color/material, typography, accessible media, and
-              grid-based design
+              grid-based design.
             </li>
             <li>
               Execute a progressively enhanced, touch-friendly, mobile-first responsive design focused
-              on system users and tasks
+              on system users and tasks.
             </li>
             <li>
-              Write informative text content; catch error conditions and guide users accordingly
+              Write informative text content; catch error conditions and guide users accordingly.
             </li>
-            <li>Experiment with design and interaction patterns for pleasing user experience</li>
+            <li>Experiment with design and interaction patterns for pleasing user experience.</li>
             <li>
               Engage in agile, iterative web design and development within a team-based workflow on
-              GitHub, via pull requests and code reviews
+              GitHub, via pull requests and code reviews.
             </li>
             </li>
           </ul>
@@ -222,10 +222,10 @@
               following:
               <ul>
                 <li>
-                  A 3-4 sentence self-critique memo of your project and your progress in class to this point
+                  A 3-4 sentence self-critique memo of your project and your progress in class to this point.
                 </li>
                 <li>
-                  A 3-4 sentence critique of each group member’s work on the project
+                  A 3-4 sentence critique of each group member’s work on the project.
                 </li>
               </ul>
              </li>
@@ -239,12 +239,12 @@
             </li>
             <li>
               Organized, readable source that is hand-written and original (no WYSIWYGs or
-              code-generators, no Bootstrap or other off-the-shelf HTML or CSS frameworks)
+              code-generators, no Bootstrap or other off-the-shelf HTML or CSS frameworks).
             </li>
             <li>
               HTML, CSS, and JavaScript files should all be indented with 2 spaces per level of
               indent; indent all CSS style rules inside the declaring block, and further indent all
-              rules and blocks inside your media queries
+              rules and blocks inside your media queries.
             </li>
             <li>HTML requirements:
               <ol>
@@ -255,22 +255,22 @@
                 </li>
                 <li>
                   Valid HTML form elements, written in conjunction with <code>&lt;label&gt;</code>
-                  tags and the <code>for</code> attribute
+                  tags and the <code>for</code> attribute.
                 </li>
                 <li>
                   Semantically structured text-based HTML content to accompany any media elements
-                  (image, audio, video)
+                  (image, audio, video).
                 </li>
               </ol>
             </li>
             <li>CSS requirements:
               <ol>
                 <li>
-                  CSS file should open with a set of reset styles.
+                  CSS file should open with a set of reset styles(don’t forget form only Normalize.css for forms).
                 </li>
                 <li>
                   Use at least two min-width media queries to enhance your mobile-first styles for
-                  larger screens
+                  larger screens.
                 </li>
               </ol>
             </li>
@@ -279,14 +279,14 @@
                 <li>
                   JavaScript that throws no uncaught errors and is loaded unobtrusively (no JavaScript
                   event attributes in your HTML, in other words; attach events to any elements
-                  requiring interaction)
+                  requiring interaction).
                 </li>
                 <li>
                   JavaScript that uses function closures and other techniques to avoid polluting the
-                  global <code>window</code> namespace
+                  global <code>window</code> namespace.
                 </li>
                 <li>
-                  JavaScript that uses only asynchronous methods and callbacks
+                  JavaScript that uses only asynchronous methods and callbacks.
                 </li>
               </ol>
             </li>
@@ -294,17 +294,17 @@
               <ol>
                 <li>
                   Whole team: A shared team Git repository with frequent commits from each team member
-                  and meaningful commit messages that accurately reflect each set of changes
+                  and meaningful commit messages that accurately reflect each set of changes.
                 </li>
                 <li>
                   Each team member: An individual Git repository with feature branches, frequent
                   commits, and meaningful commit messages that accurately reflect each set of changes
                   that you make, including experimental work that you ultimately might not push
-                  upstream to the shared group repository
+                  upstream to the shared group repository.
                 </li>
                 <li>
                   All GitHub repositories (team and individual) must contain <b>only</b> the files and
-                  commits from this project
+                  commits from this project.
                 </li>
               </ol>
             </li>
