adding validator req

--- a/syllabuspages/projects.html
+++ b/syllabuspages/projects.html
@@ -246,6 +246,7 @@
               indent; indent all CSS style rules inside the declaring block, and further indent all
               rules and blocks inside your media queries.
             </li>
+            <li>Must pass HTML and CSS validators!</li>
             <li>HTML requirements:
               <ol>
                 <li>
