--- a/syllabuspages/projects.html
+++ b/syllabuspages/projects.html
@@ -197,8 +197,8 @@
         <section class="deliverables">
           <h4>Deliverables &amp; Milestones</h4>
           <ol>
-            <li><b class="darkredfont">Due: Thursday, November 2nd, 11:59pm Chicago</b>Whole team: Create a group or joina group on basecamp
-            Project 2: Groups. Groups should be 3 or 4 people each. 
+            <li><b class="darkredfont">Due: Thursday, November 2nd, 11:59pm Chicago</b>Whole team: Create a group or join a group on basecamp
+            Project 2: Groups. Groups should be 3 or 4 people each. Group names should be creative.  
             </li>
             <li>
               <b class="darkredfont">Due: Thursday, November 2nd, 11:59pm Chicago</b> Whole Team: A screen-by-screen task analysis of
@@ -351,31 +351,20 @@
           <h4>Deliverables &amp; Milestones</h4>
           <ol class="deliverables">
             <li>
-              <b class="redfont">Due: Tuesday, November 21st, 11:59pm Chicago</b> Create a Basecamp post for the group describing your work
-              in progress. Title the post with a creative group name and project number. Your post the names of your group members and the
+              <b class="redfont">Due: Thursday, November 30th, 11:59pm Chicago</b> Create a Basecamp post for the group describing your work
+              in progress. Title the post with the same group name and project 3. Your post should include the names of your group members and the
               following&#x3a;
               <ul>
                 <li>
-                  Testing script with a welcome to your participant, an explanation of the process, and an outline of the exact'
+                  Testing script with a welcome to your participant, an explanation of the process, and an outline of the exact
                   tasks you will be asking participants to complete.
                 </li> 
-                <li>
-                  A/V release form for each participant to sign
-                <li>
-                  Site plan with identified location, required equipment, and setup/arrangement.
-                </li>
-              </ul>
-            </li>
-            <li>
-              <b class="redfont">Due: Sunday, Dec 3rd, 11:59pm Chicago</b> Update your group Basecamp post with the following&#x3a;
-              <ul>
-                <li>Video recording of each participant session</li>
-                <li>Testing notes + 3 major issues per observer, per participant</li>
+                <li>Testing notes + 3 major issues per participant.</li>
                 <li>A group-authored recommendation report on the three most pressing issues identified through your testing, including:
                   <ul>
-                    <li>an explanation as to why the issues you’ve selected are most pressing</li>
-                    <li>possible approach to implementing fixes/improvements to address the issue</li>
-                    <li>future usability tests you’d run to ensure the quality of the fix</li>
+                    <li>an explanation as to why the issues you’ve selected are most pressing.</li>
+                    <li>possible approach to implementing fixes/improvements to address the issue.</li>
+                    <li>future usability tests you’d run to ensure the quality of the fix.</li>
                   </ul>
                 </li>
               </ul>
