--- a/syllabuspages/projects.html
+++ b/syllabuspages/projects.html
@@ -198,7 +198,8 @@
           <h4>Deliverables &amp; Milestones</h4>
           <ol>
             <li><b class="darkredfont">Due: Thursday, November 2nd, 11:59pm Chicago</b>Whole team: Create a group or join a group on basecamp
-            Project 2: Groups. Groups should be 3 or 4 people each. Group names should be creative.  
+            Project 2: Groups. Groups should be 3 or 4 people each. Group names should be creative. Each group member should list their GitHub
+            username and one team member should be chosen to initiate lab 6.
             </li>
             <li>
               <b class="darkredfont">Due: Thursday, November 2nd, 11:59pm Chicago</b> Whole Team: A screen-by-screen task analysis of
