--- a/syllabuspages/projects.html
+++ b/syllabuspages/projects.html
@@ -202,16 +202,15 @@
             username and one team member should be chosen to initiate lab 6.
             </li>
             <li>
-              <b class="darkredfont">Due: Thursday, November 2nd, 11:59pm Chicago</b> Whole Team: A screen-by-screen task analysis of
-              your chosen MyIIT task (again, e.g., generating a class schedule, dropping a class, paying a tuition bill, removing a
-              registration hold) posted to Basecamp, with relevant <b>anonymized</b> capture shots
+              <b class="darkredfont">Due: Thursday, November 2nd, 11:59pm Chicago</b> Whole Team: Create a Basecamp post describing your work in 
+              progress. Title the post with your team name and project number (example: Team Wonder Women - Project 2). Your post should include 
+              the full names of all team members, and a screen-by-screen task analysis of your chosen MyIIT task (again, e.g., generating a class schedule,
+              dropping a class, paying a tuition bill, removing a registration hold) posted to Basecamp, with relevant <b>anonymized</b> capture shots
               (black out any personally identifiable information).
             </li>
             <li>
-              <b class="darkredfont">Due: Tuesday, November 14th, 11:59pm Chicago</b> Whole Team: Create a Basecamp post describing your work
-              in progress. Title the post with your team name and project number (example: Team Wonder Women &#8212; Project 2). Your post
-              should include the full names of all team members, the URL to your GitHub repository, live link (GitHub pages), 
-              and two questions eliciting feedback on from fellow students.
+              <b class="darkredfont">Due: Tuesday, November 14th, 11:59pm Chicago</b> Whole Team: First review of your work: Update your project 2 basecamp 
+              post with the URL to your group GitHub repository, live link (GitHub pages), and two questions eliciting feedback on from fellow students.
             </li>
              <li>
               <b class="darkredfont">Due: Friday, November 17th, 11:59pm Chicago</b> Individual: Give constructive comments
