Updating lab and project due dates

--- a/syllabuspages/dates.html
+++ b/syllabuspages/dates.html
@@ -63,7 +63,7 @@
           <td><a href="projects.html#project-two">Project Two</td>
         </tr>
         <tr>
-          <td>10/26</td>
+          <td>11/03</td>
           <td class="alignleft">Task Analysis Due</td>
         </tr>
         <tr>
@@ -75,7 +75,7 @@
           <td class="alignleft">Comments Due</td>
         </tr>
         <tr>
-          <td>11/23</td>
+          <td>11/30</td>
           <td class="alignleft">Final Turn In</td>
         </tr>
         <tr>
@@ -83,11 +83,7 @@
           <td><a href="projects.html#project-three">Project Three</td>
         </tr>
         <tr>
-          <td>11/21</td>
-          <td class="alignleft">First Turn In</td>
-        </tr>
-        <tr>
-          <td>12/03</td>
+          <td>11/30</td>
           <td class="alignleft">Final Turn In</td>
         </tr>
       </table>
@@ -122,7 +118,7 @@
           <td>Lab-5</td>
         </tr>
         <tr>
-          <td>10/31</td>
+          <td>11/02</td>
           <td>Lab-6</td>
         </tr>
         <tr>
@@ -130,8 +126,12 @@
           <td>Lab-7</td>
         </tr>
         <tr>
+          <td>11/14</td>
+          <td>Lab-8</td>
+        </tr>
+        <tr>
           <td>11/21</td>
-          <td>Lab-8 &amp; 9</td>
+          <td>Lab-9</td>
         </tr>
         <tr>
           <td>11/28</td>
