--- a/syllabuspages/projects.html
+++ b/syllabuspages/projects.html
@@ -210,7 +210,7 @@
             </li>
             <li>
               <b class="darkredfont">Due: Tuesday, November 14th, 11:59pm Chicago</b> Whole Team: First review of your work: Update your project 2 basecamp 
-              post with the URL to your group GitHub repository, live link (GitHub pages), and two questions eliciting feedback on from fellow students.
+              post with the URL to your group GitHub repository, live link (GitHub pages), and two questions eliciting feedback from fellow students.
             </li>
              <li>
               <b class="darkredfont">Due: Friday, November 17th, 11:59pm Chicago</b> Individual: Give constructive comments
@@ -351,8 +351,8 @@
           <h4>Deliverables &amp; Milestones</h4>
           <ol class="deliverables">
             <li>
-              <b class="redfont">Due: Thursday, November 30th, 11:59pm Chicago</b> Create a Basecamp post for the group describing your work
-              in progress. Title the post with the same group name and project 3. Your post should include the names of your group members and the
+              <b class="redfont">Due: Thursday, November 30th, 11:59pm Chicago</b> Create a Basecamp post for the group describing your work.
+              Title the post with the same group name and project 3. Your post should include the names of your group members and the
               following&#x3a;
               <ul>
                 <li>
